Refactor calculator to vanilla JS

--- a/wp-content/plugins/terrassebordkalkulator/src/editor.scss
+++ b/wp-content/plugins/terrassebordkalkulator/src/editor.scss
@@ -5,5 +5,7 @@
  */
 
 .wp-block-create-block-terrassebordkalkulator {
-	border: 1px dotted #f00;
+	border-top:1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	padding: 2rem 0;
 }
