--- a/wp-content/plugins/terrassebordkalkulator/src/style.scss
+++ b/wp-content/plugins/terrassebordkalkulator/src/style.scss
@@ -6,7 +6,21 @@
  */
 
 .wp-block-create-block-terrassebordkalkulator {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+	h5 {
+		margin-bottom: 0.5rem;
+	}
+	.terrassebordkalkulator__input {
+		display: flex;
+		flex-direction: column;
+		.terrassebordkalkulator__input__display-row {
+			display: flex;
+			justify-content: space-between;
+		}
+		.terrassebordkalkulator__input__slider {
+			padding-top: 0.5rem;
+			padding-bottom: 0.5rem;
+			margin-top: 0.5rem;
+			margin-bottom: 1rem;
+		}
+	}
 }
